# RealityGap

./: .gitignore  README.md  pyproject.toml  requirements.txt
environments/: env_parameters_handler.py  environment_transformation.py
learning_techniques/: learning_technique.py  rg_mitigation_technique.py  rg_mitigation_techniques.py  rg_mitigation_wrappers.py
misc/: agent.py
transferability/: transferability_comparator.py  transferability_evaluator.py
usage/: environment_transferability_example.py  task_transferability_example.py
