[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reality_gap"
version = "1.0.0"
description = "A modular framework to quantify the reality-gap and agent transferability"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["environments*", "learning_techniques*", "transferability*", "misc*", "usage*"]